# quant-agentic-rag

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: AGENT_FUNDAMENTALS.md  AGENT_RISK.md  AGENT_SENTIMENT.md  AI_SYSTEM_DESIGN.md  EVALUATION.md  INTERVIEW_PREP_SENIOR_RESEARCH_ENGINEER.md  NEWS_INGESTION.md  NEWS_RELEVANCE_SCORING.md  POSTGRES_REGISTRY.md  ROADMAP.md  SEC_INGESTION.md  SUPABASE_MIGRATIONS.md  THESIS_ARTIFACTS.md  TRANSCRIPT_INGESTION.md  VECTOR_DATABASES.md  WORKFLOW.md
docs/grounding/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  README.md
src/stock_agent_rag/: __init__.py  api.py  artifact_storage.py  audit.py  cli.py  config.py  db.py  evaluation.py  indexing.py  logging.py  middleware.py  prompts.py  registry.py  retrieval.py  schemas.py  service.py  supabase_bundle.py  telemetry.py  thesis_artifacts.py  tools.py  workflow.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260417070000_init_rag_schema.sql  20260417090000_add_chunk_embeddings.sql  20260417110000_add_pgvector_column.sql  (+4 more)
tests/: conftest.py  test_api.py  test_audit.py  test_cli.py  test_contradiction_check.py  test_evaluation.py  test_graph.py  test_grounding_e2e.py  test_grounding_repair.py  test_hybrid_retrieval.py  test_indexing.py  test_news_ingestion.py  test_registry.py  test_retrieval_policies.py  test_sec_ingestion.py  test_service.py  test_supabase_bundle.py  test_telemetry.py  test_thesis_artifacts.py  test_thesis_preparation.py  test_transcript_ingestion.py  test_verifier_grounding.py
(+4 files in other folders)
